# velo

./: .dockerignore  CHANGELOG.md  Dockerfile  package.json  render.yaml  vite.config.ts
.github/workflows/: release-please.yml
docs/: deploy-no-cli.md  deploy-railway.md  web-hosting.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  lib.rs  oauth.rs
src-tauri/velo-core/: Cargo.toml
src-tauri/velo-core/src/: lib.rs  oauth.rs  ops.rs
src-tauri/velo-core/src/imap/: client.rs
src-tauri/velo-core/src/smtp/: client.rs
src-tauri/velo-server/: Cargo.toml
src-tauri/velo-server/src/: auth.rs  db_gateway.rs  email_api.rs  mailboxes.rs  main.rs  notifier.rs  oauth_api.rs  profile.rs  server_crypto.rs  state.rs
src/components/accounts/: AccountSwitcher.tsx  AddImapAccount.tsx
src/components/admin/: AdminPanel.tsx
src/components/auth/: AuthGate.tsx  LoginScreen.tsx
src/components/composer/: Composer.tsx
src/components/email/: MoveToFolderDialog.tsx  ThreadView.tsx
src/components/layout/: EmailList.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: ContextMenuPortal.tsx
src/router/: navigate.ts  routeTree.tsx
src/services/: badgeManager.ts  crossAccountMove.test.ts  crossAccountMove.ts  emailActions.test.ts  emailActions.ts
src/services/auth/: authService.ts
src/services/db/: accounts.ts  connection.test.ts  connection.ts  migrations.ts
src/services/email/: gmailProvider.ts  imapSmtpProvider.test.ts  imapSmtpProvider.ts  types.ts
src/services/gmail/: syncManager.ts
src/services/imap/: folderMapper.test.ts  folderMapper.ts  imapConfigBuilder.ts  tauriCommands.test.ts  tauriCommands.ts
src/services/transport/: commandRoutes.ts  httpTransport.ts  index.ts  tauriTransport.ts  types.ts
src/services/web/: mailboxBootstrap.test.ts  mailboxBootstrap.ts  notifyDeepLink.test.ts  notifyDeepLink.ts  profileService.ts
src/stores/: authStore.ts  profileStore.ts
src/test/mocks/: entities.mock.ts
src/utils/: crypto.test.ts  crypto.ts  emailBuilder.test.ts  emailBuilder.ts
